[package]
name = "grep-lite"
version = "0.1.0"
authors = ["Arthur Lafrance <lafrancearthur@gmail.com>"]
description = "grep, but only a little bit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
regex = "1.5.5"
